Bold to not bold

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 
 		<section class="spotlight style1 orient-right content-align-center image-position-center onscroll-image-fade-in"
-			id="five" style="font-weight:bold;">
+			id="five">
 
 			<div class="inner">
 
@@ -269,10 +269,10 @@
 					<section>
 						<h3>Partner Financially</h3>
 
-						<p> Will you join us as we reach out to encourage and bless pastors and other Christian leaders?
+					<p>Will you join us as we reach out to encourage and bless pastors and other Christian leaders?
 							We would love to have you partner with us financially through a monthly commitment or a
 							one-time
-							gift.</p>
+							gift.</p>	
 
 						<a href="https://newhorizonsfoundation.com/project/single-project/1849/" target="_blank"
 							class="button big wide smooth-scroll-middle">Give</a>
