Final edit before live.

--- a/index.html
+++ b/index.html
@@ -54,18 +54,17 @@
 
 				<h2>The Need</h2>
 				<p> A significant number of pastors and Christian leaders are considering leaving their ministry
-					calling. pastoral leadership is a wonderful privilege and responsibility,
-					pastors are very real people too. Some of the challenges they face include:
-					<br />
-
-
-					<br />
-					<span style="font-style:italic;">
-						Church conflict,
+					calling due to <span style="font-style:italic;">
+						church conflict,
 						unrealistic congregational expectations,
 						discouragement, financial challenges,
 						marital issues,
-						depression, and health issues.</span>
+						depression, health issues, and more. </span> 
+					<br />
+
+
+					<br />
+					
 
 					</ul>
 				</p>
@@ -87,7 +86,7 @@
 
 				<p> These leaders need a safe and confidential place to be heard by those who understand these
 					challenges. Other leaders are doing well
-					in their current place of ministry. We want to see them remain strong and encouraged as they
+					in their current place of ministry, and we want to see them remain strong and encouraged as they
 					lead His church.
 				</p>
 
@@ -108,7 +107,7 @@
 
 				<span style="font-weight:bolder;">Encourage</span> - There is a spiritual "weight" in Christian
 				leadership that only other ministry leaders understand.
-				Having carried our own weights, we are able to walk with others and encourage them. <span
+				Having carried our own weight, we are able to walk with others and encourage them. <span
 					style="font-style:italic;"> "Therefore encourage one another and build
 					each other up, just as in fact you are doing." 1 Thess 5:11 </span>
 				<br>
@@ -131,7 +130,8 @@
 			</div>
 			<div class="image">
 
-				<img src="images/logo2.svg" alt="" />
+				<img class="leader" src="images/logo2.svg" alt="" style="max-width: 100%;
+				height: 110%;  margin-bottom: -50px;  " />
 
 
 
@@ -152,7 +152,9 @@
 						encouragement, and they have stepped alongside several leaders to strengthen and encourage them.
 						With pastoral hearts they are serving as Barnabas did in encouraging and inspiring leaders
 						to dream again.
-						Along with Leader to Leader, Norm and Corlynn are busy as interim pasotors, traveling across
+						<br/>
+						<br/>
+						Along with Leader to Leader, Norm and Corlynn are busy as interim pastors, traveling across
 						Montana to come alongside churches who are looking for a new pastor. <span><a
 								href="/interim.html">More</a> </span>
 					</p>
@@ -228,7 +230,7 @@
 							Norm and Corlynn have been leaders who have walked miles ahead
 							of me and have encouraged and discipled with truth and love. Our church was experiencing a
 							difficult transition, and their ministry helped us heal and grow. While
-							Norm served as our interim pastor, we were loved on, strengthened and built up. What a
+							Norm served as our interim pastor, we were loved on, strengthened, and built up. What a
 							blessing they both are through the wisdom they've acquired and attentiveness to the Holy
 							Spirit.
 							I am incredibly grateful to know them, and I know many others would agree."
