--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<div class="image">
 
 				<img class="leader" src="images/logo2.svg" alt="" style="max-width: 100%;
-				height: 110%;  margin-bottom: -50px;  " />
+				height: 100%;    " />
 
 
 
