--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Leader to leader</title>
-	<link rel="icon" type="image/png" href="images/icon1.svg" />
+	<link rel="icon" type="image/png" href="images/lobig.svg" />
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
